<resources>
    <string name="app_name">File Manager</string>

    <string name="quick_access_item_audio">Audio</string>
    <string name="quick_access_item_video">Video</string>
    <string name="quick_access_item_documents">Documents</string>
    <string name="quick_access_item_camera">Camera</string>
    <string name="quick_access_item_images">Images</string>
    <string name="quick_access_item_downloads">Downloads</string>

    <string name="file_size_in_bytes">%.2f B</string>
    <string name="file_size_in_kb">%.2f KB</string>
    <string name="file_size_in_mb">%.2f MB</string>
    <string name="file_size_in_gb">%.2f GB</string>

    <string name="file_sizes_in_bytes">%1$.2f / %2$.2f B</string>
    <string name="file_sizes_in_kb">%1$.2f / %2$.2f KB</string>
    <string name="file_sizes_in_mb">%1$.2f / %2$.2f MB</string>
    <string name="file_sizes_in_gb">%1$.2f / %2$.2f GB</string>

    <string name="empty_directory">Empty directory</string>
    <string name="unable_to_open_file">Unable to open file</string>

    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="select_items">Select</string>
    <string name="create_directory">Create directory</string>
    <string name="show_or_hide_system_files">Show/hide hidden files</string>

    <string name="sort_type_dialog_title">Sort by:</string>
    <string name="sort_type_dialog_positive_button">OK</string>
    <string-array name="sort_types">
        <item>Name</item>
        <item>Date</item>
        <item>Type</item>
        <item>Size</item>
    </string-array>

    <string name="directory_item_info_dialog_title">Info</string>
    <string name="directory_item_info_positive_button">Close</string>
    <string name="name">Name</string>
    <string name="full_path">Full path</string>
    <string name="size">Size</string>
    <string name="last_modification_date">Last modification date</string>

    <string name="delete_directory_item_dialog_title">Delete</string>
    <string name="delete_directory_item_dialog_message">Are you sure want to delete %s?</string>
    <string name="delete_directory_item_count_dialog_message">Are you sure want to delete %d items?</string>
    <string name="delete_directory_item_dialog_positive_button">OK</string>
    <string name="delete_directory_item_dialog_negative_button">Cancel</string>

    <string name="rename_directory_item_dialog_title">Rename</string>
    <string name="rename_directory_item_dialog_positive_button">Rename</string>
    <string name="rename_directory_item_dialog_negative_button">Cancel</string>

    <string name="create_directory_dialog_title">Create directory</string>
    <string name="create_directory_dialog_positive_button">Create</string>
    <string name="create_directory_dialog_negative_button">Cancel</string>

    <string name="copy_dialog_title">Copy</string>

    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_positive_button">OK</string>

    <string name="error_create_directory">Unable to create directory</string>
    <string name="error_delete_directory">Unable to delete directory</string>
    <string name="error_delete_file">Unable to delete file</string>
    <string name="error_directory_with_this_name_already_exists">Directory with the same name already exists</string>
    <string name="error_file_does_not_exist">File does not exist</string>
    <string name="error_file_with_this_name_already_exists">File or directory with the same name already exists</string>
    <string name="error_load_directory_content">Unable to load directory content</string>
    <string name="error_load_storages">Unable to load storages</string>
    <string name="error_rename_file">Unable to rename file or directory</string>
    <string name="error_unknown">Unknown error</string>

</resources>
