<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/item_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/item_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/item_create_directory"
        android:title="@string/create_directory"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_show_or_hide_hidden_files"
        android:title="@string/show_or_hide_system_files"
        app:showAsAction="never"
        />
</menu>