<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/item_action_mode_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/item_action_mode_cut"
        android:title="@string/cut"
        android:icon="@drawable/ic_cut_white"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_action_mode_copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_copy_white"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_action_mode_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="never"
        />
</menu>